force-app/main/default/objects/Strategic_Allocation_Request__c/Strategic_Allocation_Request__c.object-meta.xml
<CustomObject>
    <label>Strategic Allocation Request</label>
    <nameField>
        <displayFormat>SAR-{YY}{MM}-{000000}</displayFormat>
        <label>Strategic Allocation Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Allocation Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>