force-app/main/default/objects/Strategic_Allocation_Request__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Strategic Allocation Requests</relationshipLabel>
    <relationshipName>Strategic_Allocation_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>