force-app/main/default/objects/Strategic_Allocation_Request__c/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Strategic Allocation Requests (End User)</relationshipLabel>
    <relationshipName>Strategic_Allocation_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>