force-app/main/default/objects/Strategic_Allocation_Request__c/fields/Fulfilled_Qty__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Qty__c</fullName>
    <label>Fulfilled Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>