force-app/main/default/objects/Strategic_Allocation_Request__c/fields/isLocked__c.field-meta.xml
<CustomField>
    <fullName>isLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLocked</label>
    <type>Checkbox</type>
</CustomField>