force-app/main/default/objects/Strategic_Allocation_Request__c/fields/Pending_Qty__c.field-meta.xml
<CustomField>
    <fullName>Pending_Qty__c</fullName>
    <formula>Quantity__c - Fulfilled_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>