force-app/main/default/objects/Strategic_Allocation_Request__c/fields/PO_Verified__c.field-meta.xml
<CustomField>
    <fullName>PO_Verified__c</fullName>
    <label>PO Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Valid PO</fullName>
            </value>
            <value>
                <fullName>PO Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>