force-app/main/default/objects/Strategic_Allocation_Request__c/fields/Re_occurence__c.field-meta.xml
<CustomField>
    <fullName>Re_occurence__c</fullName>
    <label>Re-occurence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>