force-app/main/default/objects/Strategic_Allocation_Request__c/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Strategic Allocation Requests (Reseller)</relationshipLabel>
    <relationshipName>Strategic_Allocation_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>