force-app/main/default/objects/Strategic_Allocation_Request__c/fields/Sales_Admin_Processor__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Admin Processor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Strategic_Allocation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>