force-app/main/default/objects/Strategic_Allocation_Request__c/fields/Spa__c.field-meta.xml
<CustomField>
    <fullName>Spa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spa</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Strategic Allocation Requests</relationshipLabel>
    <relationshipName>Strategic_Allocation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>