force-app/main/default/objects/Strategic_Allocation_Request__c/validationRules/Product_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Required</fullName>
    <active>true</active>
    <description>Cannot make lookup field required. Using Validation Rule</description>
    <errorConditionFormula>isblank(Product__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Must have a product.</errorMessage>
</ValidationRule>