force-app/main/default/objects/Strategic_Allocation_Request__c/listViews/Allocation_Orders_Not_Canceled.listView-meta.xml
<ListView>
    <fullName>Allocation_Orders_Not_Canceled</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Allocation Orders Not Canceled</label>
</ListView>