force-app/main/default/objects/Strategic_Allocation_Request__c/listViews/Unfulfilled_Allocation_Orders.listView-meta.xml
<ListView>
    <fullName>Unfulfilled_Allocation_Orders</fullName>
    <columns>NAME</columns>
    <columns>Distributor__c</columns>
    <columns>End_User__c</columns>
    <columns>Fulfilled_Qty__c</columns>
    <columns>Pending_Qty__c</columns>
    <columns>PO_Number__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <columns>Sales_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Fulfilled</value>
    </filters>
    <label>Unfulfilled Allocation Orders</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <portalRoleAndSubordinates>ViewsonicPartnerUser</portalRoleAndSubordinates>
    </sharedTo>
</ListView>